--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,18 +2,21 @@ backend:
   name: github
   repo: scinio/deaxsadventure
   branch: main
-  base_url: https://api.netlify.com
+  auth_type: token
 
 media_folder: "assets/comics"
 public_folder: "/assets/comics"
 
 collections:
-  - name: "comics"
-    label: "Comic Pages"
-    folder: "assets/comics"
-    create: true
-    slug: "page{{index}}"
-    fields:
-      - { label: "Page Number", name: "title", widget: "string" }
-      - { label: "Comic Image", name: "image", widget: "image" }
-      - { label: "Upload Date", name: "date", widget: "datetime" }
+  - name: "config"
+    label: "Site Configuration"
+    files:
+      - label: "Comic List"
+        name: "comic-list"
+        file: "assets/data.json"
+        fields:
+          - label: "Pages"
+            name: "pages"
+            widget: "list"
+            fields:
+              - { label: "Image", name: "image", widget: "image" }
